--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,23 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Miguel Arbesú
+email: miguelarbesu@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+  My name is Miguel, and I am a postdoc working on Structural Biology at FMP-Berlin.
+  I like Intrinsically Disorded Proteins (IDPs), Nuclear Magnetic Resonance (NMR),
+  Python, and data analysis / visualization, in no particular order.
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: miguelarbesu
+github_username:  miguelarbesu
 
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-katex
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
