--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ github_username:  miguelarbesu
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: "default"
 plugins:
   - jekyll-feed
   - jekyll-katex
