Include splash page

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Miguel Arbesú Andrés"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "A chemist working on structural biology."
+  bio              : "I am chemist working on structural biology."
   location         : "Berlin"
   email            :
   links:
