--- a/_config.yml
+++ b/_config.yml
@@ -16,15 +16,15 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Miguel Arbesú"
+title                    : "Miguel Arbesú, PhD"
 title_separator          : "|"
-subtitle                 : "My personal website"
+subtitle                 : "A chemist doing structural biology"
 name                     : "Miguel Arbesú Andrés"
-description              : "This is my personal website"
+description              : "This personal website is a portfolio of my research and other projects and interests"
 url                      : "https://miguelarbesu.github.io"
 baseurl                  : "/"
 repository               : "miguelarbesu/miguelarbesu.github.io"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+teaser                   : "/assets/images/FUS-droplets_500x300.jpg"
 logo                     : "/assets/icons/methane.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
@@ -212,7 +212,7 @@ sass:
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone:  	Europe/Berlin
 
 
 # Plugins (previously gems:)
