--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Miguel Arbesú, PhD"
 title_separator          : "|"
-subtitle                 : "Structural biology, Python coding, and all in between"
+subtitle                 : "Proteins, Python, and everything in between"
 name                     : "Miguel Arbesú Andrés"
-description              : "This site is about my research, side projects, and related interests"
+description              : "This site is a personal repository about my research, side projects, and related interests"
 url                      : "https://miguelarbesu.github.io"
 baseurl                  : ""
 repository               : "miguelarbesu/miguelarbesu.github.io"
