Fix typo in short bio

--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   bio              : "A chemist working on structural biology. 
                       I enjoy intrinsically disordered proteins, 
                       Nuclear Magnetic Resonance, and Python.<br>
-                      I love Karate too."
+                      I love Karate, too."
   location         : "Berlin, Germany"
   links:
     - label: "Email"
