Add karate to bio

--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   name             : "Miguel Arbesú Andrés"
   avatar           : "/assets/images/arbesu_avatar.jpg"
   bio              : "A chemist working on structural biology. 
-                      I enjoy intrinsically disordered proteins, 
+                      I enjoy Intrinsically Disordered Proteins, 
                       Nuclear Magnetic Resonance, and Python.<br>
                       I love Karate, too."
   location         : "Berlin, Germany"
