Add academicons css
Google scholar now available

--- a/_config.yml
+++ b/_config.yml
@@ -124,6 +124,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/miguelarbesu"
+    - label: "Google Scholar"
+      icon: "ai ai-google-scholar-square"
+      url: "https://scholar.google.es/citations?user=9t-FKjoAAAAJ&hl=es"
     - label: "ResearchGate"
       icon: "fab fa-fw fa-researchgate"
       url: "https://www.researchgate.net/profile/Miguel_Arbesu"
