--- a/_config.yml
+++ b/_config.yml
@@ -260,6 +260,11 @@ tag_archive:
 #   permalinks:
 #     category: /categories/:name/
 #     tag: /tags/:name/
+collections:
+  projects:
+    output: true
+    permalink: /projects/:title
+
 
 
 # HTML Compression
@@ -283,4 +288,12 @@ defaults:
       comments: true
       share: true
       related: true
+    # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
       
