Rearrange posts and collections
Need to fix research to display posts by year for each paper

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   - title: "Projects"
     url: /projects/
   - title: "Blog"
-    url: /year-archive/
+    url: /blog/
   - title: "License & Privacy"
     url: /license-privacy/
   # - title: "Sitemap"
