--- a/_config.yml
+++ b/_config.yml
@@ -264,6 +264,9 @@ collections:
   projects:
     output: true
     permalink: /projects/:title
+  research:
+    output: true
+    #permalink: /research/:title
 
 
 
@@ -277,6 +280,16 @@ compress_html:
 
 # Defaults
 defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      header:
+        overlay_color: "#000"
+        overlay_filter: "0.5"
+        overlay_image: assets/images/FUS-droplets_full.jpg
   # _posts
   - scope:
       path: ""
@@ -288,12 +301,33 @@ defaults:
       comments: true
       share: true
       related: true
-    # _portfolio
+      header:
+        overlay_color: "#000"
+        overlay_filter: "0.5"
+        overlay_image: assets/images/FUS-droplets_full.jpg
+  # _projects
   - scope:
       path: ""
-      type: portfolio
+      type: projects
     values:
       layout: single
-      author_profile: false
+      author_profile: true
+      comments: true
       share: true
-      
+      header:
+        overlay_color: "#000"
+        overlay_filter: "0.5"
+        overlay_image: assets/images/FUS-droplets_full.jpg
+    # _research
+  - scope:
+      path: ""
+      type: research
+    values:
+      layout: single
+      author_profile: true
+      comments: true
+      share: true
+      header:
+        overlay_color: "#000"
+        overlay_filter: "0.5"
+        overlay_image: assets/images/FUS-droplets_full.jpg
