--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Miguel Arbesú, PhD"
 title_separator          : "|"
-subtitle                 : "Proteins, Python, and everything in between"
+subtitle                 : "Proteins & Python"
 name                     : "Miguel Arbesú Andrés"
 description              : "This site is a personal repository about my research, side projects, and related interests"
 url                      : "https://miguelarbesu.github.io"
