--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Miguel Arbesú, PhD"
 title_separator          : "|"
-subtitle                 : "Proteins, Python, and everything in between"
+subtitle                 : "Proteins & Python"
 name                     : "Miguel Arbesú Andrés"
 description              : "This site is a personal repository about my research, side projects, and related interests"
 url                      : "https://miguelarbesu.github.io"
 baseurl                  : ""
 repository               : "miguelarbesu/miguelarbesu.github.io"
-teaser                   : "/assets/images/FUS-droplets_500x300.jpg"
+teaser                   : "/assets/images/FUS-droplets_500x300.png"
 logo                     : "/assets/icons/methane.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
@@ -296,7 +296,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: true
       share: true
@@ -311,13 +311,14 @@ defaults:
       type: projects
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       comments: true
       share: true
       header:
         overlay_color: "#000"
         overlay_filter: "0.5"
         overlay_image: assets/images/FUS-droplets_full.jpg
+        teaser: assets/images/FUS-droplets_500x300.png
     # _research
   - scope:
       path: ""
